--- a/2311-itr2/pom.xml
+++ b/2311-itr2/pom.xml
@@ -38,6 +38,13 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
